fix: изменил запрос на загрузку файла

--- a/task5/src/modules/TaskPage/components/TaskContent/task-modal.module.scss
+++ b/task5/src/modules/TaskPage/components/TaskContent/task-modal.module.scss
@@ -90,6 +90,9 @@ $defalt-avatar: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg
       font-size: 12px;
       color: #abbed1;
    }
+   &_text > strong {
+      font-weight: 800;
+   }
    &_textblack {
       font-weight: 400;
       font-size: 12px;
