feat: colorSchema для карточки таски

--- a/task5/src/modules/KanbanPage/components/task-card/task-card.module.css
+++ b/task5/src/modules/KanbanPage/components/task-card/task-card.module.css
@@ -1,6 +1,6 @@
 .card {
    background-color: white;
-   min-height: 160px;
+   /* min-height: 160px; */
    border-radius: 6px;
    padding: 12px;
    cursor: pointer;
@@ -25,7 +25,8 @@
       font-size: 12px;
       display: flex;
       justify-content: start;
-      gap: 0.25rem;
+      gap: 0.35rem;
+      flex-wrap: wrap;
       
       span{
          background-color: aliceblue;
