feat: fix: добавлена функция загрузки и добавления/удаления файлов из проекта; переделан кастомный textearea, на основе div; изменены api, taskFiles, сommentComp, commentForm, fileUploader, TaskContent; изменен middlewair, исправлена аутентификация

--- a/task5/src/modules/TaskPage/components/CommentForm/commform.module.scss
+++ b/task5/src/modules/TaskPage/components/CommentForm/commform.module.scss
@@ -27,6 +27,14 @@
    border-top-right-radius: 8px;
    gap: 9px;
 }
+.icon {
+   &:hover > path {
+      fill: #3787eb;
+   }
+}
+.activeicon {
+   background-color: #bbbbbb;
+}
 .texterea {
    background-color: #f4f6f8;
    padding: 12px 20px;
@@ -36,9 +44,9 @@
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
 }
-.texterea::-webkit-resizer {
-   background: transparent;
-}
+// .texterea::-webkit-resizer {
+//    background: transparent;
+// }
 .submitter {
    border-radius: 6px;
    font-weight: 400;
