fix: изменил добавление файлов; добавил остальные модалки

--- a/task5/src/modules/TaskPage/components/CommentForm/commform.module.scss
+++ b/task5/src/modules/TaskPage/components/CommentForm/commform.module.scss
@@ -43,6 +43,7 @@
    resize: vertical;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
+   position: relative;
 }
 // .texterea::-webkit-resizer {
 //    background: transparent;
