--- a/task5/src/modules/TaskModalCreationEditing/task-modal-creation-editing.module.scss
+++ b/task5/src/modules/TaskModalCreationEditing/task-modal-creation-editing.module.scss
@@ -14,11 +14,13 @@
 }
 
 .modal-creation-editing {
-   position: absolute; // !!!
+   position: fixed; // !!!
    z-index: 10;
-   top: 0;
-   left: 0;
-   width: 100%;
+   top: 50%;
+   left: 50%;
+   width: 100vw;
+   height: 100vh;
+   transform: translate(-50%, -50%);
 
    background-color: rgba(31, 31, 31, 0.5);
 
