--- a/task5/src/modules/TaskPage/components/TaskContent/task-modal.module.scss
+++ b/task5/src/modules/TaskPage/components/TaskContent/task-modal.module.scss
@@ -3,12 +3,7 @@ $defalt-avatar: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg
 
 .wrapper {
    display: flex;
-   justify-content: center;
-   position: relative;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
+   justify-content: space-between;
 }
 
 .content {
