--- a/task5/src/components/select_custom_checkbox/SelectCustomCheckbox.module.scss
+++ b/task5/src/components/select_custom_checkbox/SelectCustomCheckbox.module.scss
@@ -190,9 +190,9 @@ $height-select: 40px;
                      height: 7px;
                      border: solid $background-color;
                      border-width: 0 2px 2px 0;
-                     top: 3px;
-                     left: 6px;
-                     transform: rotate(45deg);
+                     top: 45%;
+                     left: 30%;
+                     transform: rotate(45deg) translate(-50%, -50%);
                   }
                }
             }
