--- a/task5/src/modules/ProjectsPage/projects-page.module.css
+++ b/task5/src/modules/ProjectsPage/projects-page.module.css
@@ -28,6 +28,9 @@
          margin: 1rem 0;
          display: flex;
          gap: .5rem;
+         input{
+            cursor: pointer;
+         }
       }
 
       h4 {
