--- a/task5/src/modules/TaskPage/task-page.module.scss
+++ b/task5/src/modules/TaskPage/task-page.module.scss
@@ -6,8 +6,12 @@
    &_modal {
       padding: 78px 120px;
       background-color: #1f1f1f8a;
-      position: absolute;
-      z-index: 10;
+      position: fixed;
+      z-index: 2;
+      top: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow-y: scroll;
    }
    &_modalbox {
       display: flex;
