--- a/task5/src/modules/KanbanPage/kanban-page.module.css
+++ b/task5/src/modules/KanbanPage/kanban-page.module.css
@@ -3,15 +3,20 @@
    flex-direction: column;
    height: calc(100vh - 4rem);
 
-   &>*:nth-last-child(-n+2) {
+   /* &>*:nth-last-child(-n+2) {
       position: relative;
       width: 100%;
       flex-basis: 100%;
       flex-grow: 1;
-   }
+   } */
 
    &>*:last-child{
-      display: none;
+      /* display: none; */
+
+      position: relative;
+      width: 100%;
+      flex-basis: 100%;
+      flex-grow: 1;
    }
 }
 
