--- a/task5/src/modules/KanbanPage/components/task-card/task-card.module.css
+++ b/task5/src/modules/KanbanPage/components/task-card/task-card.module.css
@@ -13,8 +13,9 @@
    h3 {
       font-weight: bold;
       font-size: 14px;
+      word-break: break-all;
    }
-   
+
    h4 {
       color: var(--tasks-text-color);
       font-size: 12px !important;
@@ -27,8 +28,8 @@
       justify-content: start;
       gap: 0.35rem;
       flex-wrap: wrap;
-      
-      span{
+
+      span {
          background-color: aliceblue;
          padding: 2.5px 6px;
          border-radius: 4px;
