--- a/task5/src/modules/ProjectsPage/projects-page.module.css
+++ b/task5/src/modules/ProjectsPage/projects-page.module.css
@@ -12,6 +12,7 @@
          display: flex;
          justify-content: space-around;
          gap: 1rem;
+         margin-bottom: 1.2rem;
 
          & > * {
             flex-basis: 50%;
