--- a/task5/src/modules/ProjectsPage/projects-page.module.css
+++ b/task5/src/modules/ProjectsPage/projects-page.module.css
@@ -16,6 +16,13 @@
 
          & > * {
             flex-basis: 50%;
+            &::after {
+               content: attr(data-error);
+               color: #eb597b;
+               font-size: 11px;
+               position: relative;
+               top: 6px;
+            }
 
             input {
                width: 100%;
@@ -86,7 +93,8 @@
       font-weight: bold;
    }
 
-   h6, label {
+   h6,
+   label {
       /* font-size: 14px; */
       color: var(--bread-crumbs-text);
       margin-bottom: 0.5rem;
