feat: выпадающий список юзеров при фильтре задач

--- a/task5/src/modules/KanbanPage/kanban-page.module.scss
+++ b/task5/src/modules/KanbanPage/kanban-page.module.scss
@@ -10,7 +10,7 @@
       flex-grow: 1;
    } */
 
-   &>*:last-child{
+   & > *:last-child {
       /* display: none; */
 
       position: relative;
@@ -47,7 +47,7 @@
          height: 16px;
          display: inline-block;
          border-radius: 4px;
-         line-height: 11px;
+         line-height: 12px;
          margin-right: 0.5rem;
          text-align: center;
       }
@@ -68,6 +68,12 @@
       & > div {
          flex-grow: 0.5;
       }
+   }
+
+   .filtered_ddbox {
+      color: var(--bread-crumbs-text);
+      font-size: 14px;
+      flex-basis: 24%;
    }
 
    & > div {
@@ -95,6 +101,7 @@
    input {
       width: 264px;
       width: 100%;
+      height: 40px;
    }
 }
 
