--- a/task5/src/modules/TaskPage/components/TaskContent/task-modal.module.scss
+++ b/task5/src/modules/TaskPage/components/TaskContent/task-modal.module.scss
@@ -13,6 +13,7 @@ $defalt-avatar: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg
       font-weight: 600;
       font-size: 20px;
       color: #222;
+      word-break: break-all;
    }
    &_desc {
       padding: 16px 0 0;
@@ -89,6 +90,7 @@ $defalt-avatar: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg
       font-weight: 400;
       font-size: 12px;
       color: #abbed1;
+      word-break: break-all;
    }
    &_text > strong {
       font-weight: 800;
