fix: очистка кода

--- a/task5/src/components/select_custom_checkbox/SelectCustomCheckbox.module.scss
+++ b/task5/src/components/select_custom_checkbox/SelectCustomCheckbox.module.scss
@@ -175,6 +175,7 @@ $height-select: 40px;
             display: flex;
             align-items: center;
             cursor: pointer;
+            color: #212121;
 
             .checkbox-input {
                display: none; // Скрываем стандартный чекбокс
