--- a/task5/src/modules/ProjectsPage/projects-page.module.css
+++ b/task5/src/modules/ProjectsPage/projects-page.module.css
@@ -80,6 +80,7 @@
       font-size: 14px;
       padding: 0.6rem 0;
       padding-left: 1.2rem;
+      padding-right: .6rem;
       color: #333333;
 
       &::placeholder {
