fix: close checkbox

--- a/task5/src/modules/KanbanPage/kanban-page.module.scss
+++ b/task5/src/modules/KanbanPage/kanban-page.module.scss
@@ -75,6 +75,10 @@
       font-size: 14px;
       flex-basis: 23%;
       max-width: none;
+
+      span svg path {
+         fill: #abbed1;
+      }
    }
 
    & > div {
