--- a/task5/src/components/range_calendar/range-calendar.module.css
+++ b/task5/src/components/range_calendar/range-calendar.module.css
@@ -11,15 +11,35 @@
 }
 
 
-.calendar{
+.calendar {
    z-index: 21;
    top: 40.5px;
 
-   &.visible{
+   &.visible {
       visibility: hidden;
    }
 }
 
-.range_calendar input{
+.reset {
+   color: orange;
+   color: gray;
+   left: .6rem;
+   top: .1rem;
+   opacity: .6;
+   cursor: default;
+   transition: .3s;
+
+   &:hover{
+      opacity: 1;
+      color: orange;
+   }
+}
+
+.range_calendar input {
    cursor: pointer;
+}
+
+.range {
+   background-color: #eef5fc !important;
+   color: black;
 }
